Uploaded files for the 2024 update.
Includes images, cover art, and a more accessible color scheme.

--- a/backmatter.tex
+++ b/backmatter.tex
@@ -1,6 +1,6 @@
 \clearpage
 \thispagestyle{empty}
-\pagecolor{philgreen}\afterpage{\nopagecolor}
+\pagecolor{black}\afterpage{\nopagecolor}
 
 \vfill
 \ 
@@ -11,5 +11,5 @@ We all have questions. From a young age, children will constantly ask ``why?'' T
 \vfill
 
 \parbox{5 in}{\color{white}
-Davis A. Smith is an Adjunct Professor of Philosophy at Pierce College in Lakewood, Washington, USA. Believing that the cost and quality of textbooks are under-discussed obstacles to the accessibility of a course and student success, Davs has written a total of three OER (Open Educational Resource) textbooks. The first is a version of the formal logic textbook \emph{forall x} (called \emph{forall x: $R^3$}), this textbook was his second, and the third is an Introduction to Ethics textbook called \emph{Who Should I Be? What Should I Do?}.  His primary areas of research are in The Mind-Body Problem, The Free Will Debate, and various questions in Philosophy of Language concerning meaning and intent. 
+Davis A. Smith is an Adjunct Professor of Philosophy at Pierce College in Lakewood, Washington, USA. Believing that the cost and quality of textbooks are under-discussed obstacles to the accessibility of a course and student success, Davis has written a total of three OER (Open Educational Resource) textbooks. The first is a version of the formal logic textbook \emph{forall x} (called \emph{forall x: $R^3$}), this textbook was his second, and the third is an Introduction to Ethics textbook called \emph{Who Should I Be? What Should I Do?}.  His primary areas of research are in The Mind-Body Problem, The Free Will Debate, and various questions in Philosophy of Language concerning meaning and intent. 
 }
