--- a/modeleven.tex
+++ b/modeleven.tex
@@ -4,20 +4,20 @@
 \chapter{Part 25: Political Philosophy}
 
 
-For this module, we are moving into an area of philosophy known as Political Philosophy. This area of philosophy deals with topics like justice, moral/immoral laws\footnote{It is possible, unless you are a moral relativist, to have laws which are immoral. For example, slavery was legal, but it was not moral. This area of Political Philosophy asks questions like "how would you enact moral rules into legal ones?"}, liberty\footnote{Questions here concern questions about the nature of liberty, freedom, how far does it extend, when should it be limited. This should not be confused with the free-will debate, as that's a question about whether our actions are deterministic and moral responsibility.}, punishment\footnote{Essentially "why do we punish people?", "how much should we punish?", and other such questions.}, and so on. For my content here, I am drawing much from John Rawls' A Theory of Justice (which best frames my personal beliefs regarding these things) and Robert Nozick's Anarchy, State, and Utopia (which is almost the exact opposite stance). Both of those works really frame the contemporary discussions in American Political Philosophy, with Nozick's ideas appearing often in conservative side of contemporary political discourse. To put a slogan to Rawls' notion of justice, it would be:
+For this module, we are moving into an area of philosophy known as Political Philosophy. This area of philosophy deals with topics like justice, moral/immoral laws\footnote{It is possible, unless you are a moral relativist, to have laws which are immoral. For example, slavery was legal, but it was not moral. This area of Political Philosophy asks questions like ``how would you enact moral rules into legal ones?"}, liberty\footnote{Questions here concern questions about the nature of liberty, freedom, how far does it extend, when should it be limited. This should not be confused with the free-will debate, as that's a question about whether our actions are deterministic and moral responsibility.}, punishment\footnote{Essentially ``why do we punish people?", ``how much should we punish?", and other such questions.}, and so on. For my content here, I am drawing much from John Rawls' A Theory of Justice (which best frames my personal beliefs regarding these things) and Robert Nozick's Anarchy, State, and Utopia (which is almost the exact opposite stance). Both of those works really frame the contemporary discussions in American Political Philosophy, with Nozick's ideas appearing often in conservative side of contemporary political discourse. To put a slogan to Rawls' notion of justice, it would be:
 \begin{center}
 Justice is equality
 \end{center}
 But, if that's the best way to encompass Rawls' views into three words (it is), then we will need to do a deep dive into the nature of equality in order to understand what it is and thereby understand what justice is. In doing this, also, we will see Nozick's view on justice come up from time to time, as it is in stark contrast to this notion.
 \section{So what is equality exactly?}
 
-Equality is often framed in terms of sameness. You and I are the same, so we are equal. We have the same job, so we should be paid equally. We are the same in social standing, so we are equal. Equality is often seen as a political goal, something worth shooting for. For example, if we notice a pay discrepancy, then we try to enact things which change that. In this case, you get the slogan "equal pay of equal work." Similarly, people want legal equality, and this is where we see Rawls' notion in its most obvious setting. If two people commit the same crime, we often think that it's unjust for one to get a lesser sentence than the other. People in protests about these things cry out that all people should be equal. Those who argue for equality, of any form, are called egalitarians.
+Equality is often framed in terms of sameness. You and I are the same, so we are equal. We have the same job, so we should be paid equally. We are the same in social standing, so we are equal. Equality is often seen as a political goal, something worth shooting for. For example, if we notice a pay discrepancy, then we try to enact things which change that. In this case, you get the slogan ``equal pay of equal work." Similarly, people want legal equality, and this is where we see Rawls' notion in its most obvious setting. If two people commit the same crime, we often think that it's unjust for one to get a lesser sentence than the other. People in protests about these things cry out that all people should be equal. Those who argue for equality, of any form, are called egalitarians.
 
 Various intuitions about the nature of morality or other people have lead to the same, or subtly different, beliefs about the morality of equality.  In the case of Christian thought, it stems from the idea that all people are equal in the eyes of God. As a result, to have the kind of society which God would want for us, we should all be equal in it. Kantians, though often Christians, believe that, due to rationality, all people are due equal respect and from that should be equal within a society. Consequentialists, more particularly Utilitarians, tend to think that equality is the best way to ensure everyone’s well-being and get that all people should be equal to get the best society possible for people.
 
 In general, we all have a pretty good intuition about what equality is, and this notion is applied in several different ways. For example, you can have numerical equality (2 = 2), equality in quality (being equally good), and many others. But, it should be pretty clear that all people are not equal in all things. Some people are smarter than others, prettier, stronger, taller, and so on. Pretty much any comparison you could make between two people will lead to some being more of that than others (in the case of natural, in born traits). It would be absurd for the egalitarians to argue that people should be equal in all things. Such a world would be one of clones, no one in any way better than any others. Egalitarians, therefore, can’t be making an argument with a conclusion like that (Rawls certainly does not).
 
-But, despite this, many opponents of equality frame it in that way. They make the claim that their opponents are arguing something absolutely absurd in order to convince the people to vote/decide against them. This is called straw-manning, where you set up your opponent wrongly as to make them easily defeatable. Because of this easy confusion and the absurdity of the general, we must think of equality as being limited to various contexts. So, "all people should be equal" is not some statement about a world of indistinguishable people, but rather is a statement about equality in a particular context. With that being said, there are three places where people have argued for equality in sensible ways:
+But, despite this, many opponents of equality frame it in that way. They make the claim that their opponents are arguing something absolutely absurd in order to convince the people to vote/decide against them. This is called straw-manning, where you set up your opponent wrongly as to make them easily defeatable. Because of this easy confusion and the absurdity of the general, we must think of equality as being limited to various contexts. So, ``all people should be equal" is not some statement about a world of indistinguishable people, but rather is a statement about equality in a particular context. With that being said, there are three places where people have argued for equality in sensible ways:
 \begin{enumerate}
     \item Equality of the distribution of money
     \item Equality of employment opportunities
@@ -32,7 +32,7 @@ In Star Trek as well as The Orville, the future is portrayed without money. Ther
 But, as it sits now, we don't have that sort of technology, we need some kind intermediary to exchange goods.\footnote{For a great look at the history of money (and why simple barter systems just don't work), check out this series of videos from Extra Credits [link and citation needed]}. Equality of the Distribution of Money can be seen as a rather extreme view, way too utopian, but that has not stopped people from arguing for it and various lesser versions of it are found around the globe, as we will see. This is the stance that all money in a society should be equally distributed among all of the adults in the society. Everyone gets the same income, so to speak. Some have put this as a universal income regardless of the working status. But, as always, we need to look at the reasoning behind the idea to see whether it holds water.  There are, in general, two lines of thought to get to this idea:
 \subsection{Utilitarian Considerations}
 
-If you like a Utilitarian-style of thinking, then we have that having an equally distributed basic income will maximize the well-being of that society. This is because, as we have seen time and time again, and we will see later (after the discussion), massive income inequality can and does lead to an overall decrease in well-being. Sure, it's good for those who have a lot, but the state of those with little far outweighs that. People often think that others have the ability to rise up, given enough 'gumption', but this belief is caused by the exact same fallacy which we saw in the last module concerning harming animals and serial killers. 
+If you like a Utilitarian-style of thinking, then we have that having an equally distributed basic income will maximize the well-being of that society. This is because, as we have seen time and time again, and we will see later (after the discussion), massive income inequality can and does lead to an overall decrease in well-being. Sure, it's good for those who have a lot, but the state of those with little far outweighs that. People often think that others have the ability to rise up, given enough `gumption', but this belief is caused by the exact same fallacy which we saw in the last module concerning harming animals and serial killers. 
 
 Rawls used this kind of reasoning in A Theory of Justice. Though Rawls and the vast majority of Consequentialist Political Philosophers don't go this far, it is within the ballpark of possibility. Rawls and others claim that justice does entail equality of this sort, but with a massive caveat. Income inequality is just only if the population of the society, over all, is better off with that inequality than without it. Put into a more practical case, this means that if you are rich and you want a tax-break, then you will need to prove that you having more money than other people makes their lives better, not just yours. Or, in another example, reducing the taxes on the wealthiest of us would actually need to create jobs.\footnote{I used to use an example involving the Boeing Company for this, how their tax-breaks did not create jobs, but actually killed them, but I got too much recoil from it.} Putting this caveat on the equality of money does give you an even stronger Consequentialist position, but it still falls into the issues seen in the next page.
 \subsection{Kantian-style Thinking}\footnote{This entire section on Kantian style thinking is up for revision, as an interesting paper has come to my attention concerning Kant on the redistribution of money, which is radically different than how Nozick portrays it.}
@@ -61,9 +61,9 @@ The best arguments for this can be found, not in Ayn Rand, but in Robert Nozick.
 
 This is NOT the stance that all people should have the same chance to get a job that they want, though it is sometimes given in that way. To see why saying all people should have the same shot at any job, take the following examples:
 
-    \factoidbox{Suppose that I was applying to be the president of this college, the highest, top-tier position. I do not have any experience in that kind of work, aside from working with some committees here and there nor did I take any classes on college administration in school. Also suppose that at the same time another person was applying for the job (it can only go to one of us). This person took classes in college administration, they have experience in the field, and worked closely with the previous president, so they know the ins and outs of this particular college.  If equality of opportunity meant that all people had the same chance of getting any job if they apply, then this would mean that the hiring committee would need to flip a coin to decide who got the job.
+    \thoughtex{Fugu Chef vs Diesel Mechanic}{Suppose that I was applying to be the president of this college, the highest, top-tier position. I do not have any experience in that kind of work, aside from working with some committees here and there nor did I take any classes on college administration in school. Also suppose that at the same time another person was applying for the job (it can only go to one of us). This person took classes in college administration, they have experience in the field, and worked closely with the previous president, so they know the ins and outs of this particular college.  If equality of opportunity meant that all people had the same chance of getting any job if they apply, then this would mean that the hiring committee would need to flip a coin to decide who got the job.
 
-    Similarly, suppose that two people had recently graduated from medical school, specializing in brain-surgery. One of them spent their summers working as a fugu-chef, getting some renown in that regard, the other spent their summers working as a mechanic on diesel trucks, also getting some renown. Assuming all else is equal, who would you rather have performing delicate surgery on you?}
+    Similarly, suppose that two people had recently graduated from medical school, specializing in brain-surgery. One of them spent their summers working as a fugu-chef, getting some renown in that regard, the other spent their summers working as a mechanic on diesel trucks, also getting some renown. Assuming all else is equal, who would you rather have performing delicate surgery on you?}{fugumechanic.jpg}
 
 But flipping a coin in this way is not how things should be done, and it should be clear why through looking at the second example. In the second case, it would be really strange for you to pick the mechanic. The delicate and precise hand-eye coordination required to prepare and serve blowfish (which is highly poisonous, if the smallest error is made in the process) is a relevant factor in making the choice. 
 
@@ -73,7 +73,7 @@ Equality of opportunity is the stance that two people should have the same shot 
 \end{center}
 No factors unrelated to the job should be included. Sometimes factors unrelated to their education or direct experience can be included (in the case of the mechanic vs fugu-chef), but those are related to the job. So, in the case of being president of the college, I should not be given the same chance as someone with experience, because I am unfit for the position. That being said, if two people are equally qualified for a position, then the just thing would be to flip a coin.
 
-Failure to adhere to this sort of impartiality is most often seen in cases of nepotism. Nepotism, literally, is the favoring or giving preferential treatment to friends and relatives when making a hiring decision. Often, in such cases, the treatment is so preferential that people wholly unqualified for a position are given it solely because of their relationship with the person making the choice.  Doing such a thing is a very dangerous decision, because it's likely that they will do worse in the position than someone else. I believe it was in The Princess Diaries 2 where it was said "Nepotism belongs in the arts, not in plumbing". 
+Failure to adhere to this sort of impartiality is most often seen in cases of nepotism. Nepotism, literally, is the favoring or giving preferential treatment to friends and relatives when making a hiring decision. Often, in such cases, the treatment is so preferential that people wholly unqualified for a position are given it solely because of their relationship with the person making the choice.  Doing such a thing is a very dangerous decision, because it's likely that they will do worse in the position than someone else. I believe it was in The Princess Diaries 2 where it was said ``Nepotism belongs in the arts, not in plumbing". 
 
 On the other-side, a common way to promote equality in opportunity given ability is found in the real world through Reverse Discrimination practices. Reverse discrimination means actively recruiting people from previously underprivileged groups. In other words, reverse discriminators deliberately treat job applicants unequally in that they are biased towards people from groups against which discrimination has usually been directed. The point of treating people unequally in this way is that it is intended to speed up the process of society becoming more equal, not only by getting rid of existing imbalances within certain professions, but also by providing role models for young people from the traditionally less privileged groups to imitate and look up to. Take the case of philosophy professors for example:
 
@@ -90,7 +90,7 @@ Remember what I said previously about nepotism. This is giving preferential trea
 \begin{center}
 Reverse Discrimination is still discrimination
 \end{center}
-The aims of reverse discrimination may be egalitarian, but some people feel that the way it achieves them is unfair. Remember what I said about this stance, equality of opportunity does not allow for any features not related to the job to be taken into account in the hiring process. For example, in the real world, I am not allowed to have my picture in my CV\footnote{A CV is a kind of resume used in academic and more brainy lines of work. It tends to be far more in depth, but far more dry.} because what I look like is a irrelevant factor. Similarly, if I had given favoritism to women philosophers in choosing my content, I would have been bringing in a factor which is not relevant to the quality of the course which I want to provide and create. For a staunch egalitarian, a principle of equality of opportunity in employment means that any form of discrimination on non-relevant grounds must be avoided. The only grounds for treating applicants differently is that they have relevantly different attributes. Yet the whole justification of reverse discrimination rests on the assumption that in most jobs such things as the sex, sexual orientation, gender, or racial origin of the applicant are not relevant.\footnote{Such identifying characteristics fall into what Rawls calls "non-moral factors" when discussing his test for how just a society is. In his case, reverse discrimination is bringing in "irrelevant factors".}
+The aims of reverse discrimination may be egalitarian, but some people feel that the way it achieves them is unfair. Remember what I said about this stance, equality of opportunity does not allow for any features not related to the job to be taken into account in the hiring process. For example, in the real world, I am not allowed to have my picture in my CV\footnote{A CV is a kind of resume used in academic and more brainy lines of work. It tends to be far more in depth, but far more dry.} because what I look like is a irrelevant factor. Similarly, if I had given favoritism to women philosophers in choosing my content, I would have been bringing in a factor which is not relevant to the quality of the course which I want to provide and create. For a staunch egalitarian, a principle of equality of opportunity in employment means that any form of discrimination on non-relevant grounds must be avoided. The only grounds for treating applicants differently is that they have relevantly different attributes. Yet the whole justification of reverse discrimination rests on the assumption that in most jobs such things as the sex, sexual orientation, gender, or racial origin of the applicant are not relevant.\footnote{Such identifying characteristics fall into what Rawls calls ``non-moral factors" when discussing his test for how just a society is. In his case, reverse discrimination is bringing in ``irrelevant factors".}
 \subsection{Problem 2: Resentment}
 
 This issue is one which is found quite often, though I am happy to say that I have never felt this way. Reverse discrimination is supposed to make access to various professions more evenly distributed across the population, but sometimes, this is not the case, in fact, it can have the opposite affect. Sometimes, in order to reach certain standards of equality, the groups will have no choice but to hire a person who is simply not qualified for the position, or intentionally not hire the best person for the job because they are not from a disadvantaged group. Those who fail to get a particular job because they happen not to come from a disadvantaged group may feel resentment against those who get jobs largely because of their sex or racial origin. Similarly, if a person gets a job because of their status and they fail at it, this can lead to other members of that group thinking that they, too, will fail.
