--- a/modfive.tex
+++ b/modfive.tex
@@ -10,9 +10,9 @@ In philosophy, ‘God’ is given a standard three part definition, though some 
 \end{earg}
 So, these ultimately boil down to the idea that God is the ultimate being, there is nothing which She can't do, nothing She doesn't know, and She would never do anything morally wrong or unjust. The core question in philosophy of religion (I wish it had a different name, as this one can be misleading) is whether such an entity exists. A related question is whether we can prove it? Whether such an entity exists is a metaphysical question while whether we can prove it or know whether such a being exists before our deaths is a different kind of question, an epistemic one. There are many different proofs for the existence of God and all have at least one glaring problem.
 
-For this section, we will be covering 4 different arguments for the existence of God and 1 argument against the existence of such a being. The arguments in favor of God's existence are The Design Argument, The Fine Tuning Argument, The First Cause Argument, and the Ontological Argument. I am willing to wager that if you believe in such a deity, the justification for the belief (likely) is some variation on the arguments seen in this class. For example, I love watching town-hall style school-board debates (when science textbooks are discussed) because I find arguments like the ones covered here 'in the wild'. Though, I will admit, it's very unlikely that I will ever see the last argument covered here in such an environment, which is a shame, as it's by far the strongest you are going to find, the rest are pretty bluntly seen.  
+For this section, we will be covering 4 different arguments for the existence of God and 1 argument against the existence of such a being. The arguments in favor of God's existence are The Design Argument, The Fine Tuning Argument, The First Cause Argument, and the Ontological Argument. I am willing to wager that if you believe in such a deity, the justification for the belief (likely) is some variation on the arguments seen in this class. For example, I love watching town-hall style school-board debates (when science textbooks are discussed) because I find arguments like the ones covered here `in the wild'. Though, I will admit, it's very unlikely that I will ever see the last argument covered here in such an environment, which is a shame, as it's by far the strongest you are going to find, the rest are pretty bluntly seen.  
 
-It is very important that you know this is what philosophers mean by 'God', it may be different than the one you think of and many of the arguments for this being are from a monotheistic tradition. Talk of gods (plural) and arguments for them are not really found in the western tradition. But, I will also say, that all but the last argument can work for a pantheon of deities. 
+It is very important that you know this is what philosophers mean by `God', it may be different than the one you think of and many of the arguments for this being are from a monotheistic tradition. Talk of gods (plural) and arguments for them are not really found in the western tradition. But, I will also say, that all but the last argument can work for a pantheon of deities. 
 
 \section{The Design Argument}
 
@@ -26,7 +26,7 @@ plural=teleological arguments
 }
 
 
-    \factoidbox{Suppose that you are walking through the forest, on a hiking trail, and you can across a computer, hooked to a running generator, mouse, keyboard, all on a desk. The computer is on and playing the classic Doom. Would you say that this appeared randomly, or would you say that someone built it?}
+    \thoughtex{The Forest Computer}{Suppose that you are walking through the forest, on a hiking trail, and you can across a computer, hooked to a running generator, mouse, keyboard, all on a desk. The computer is on and playing the classic Doom. Would you say that this appeared randomly, or would you say that someone built it?}{ForestComputer.jpg}
 
 More than likely, you will say that someone built it. However, the human body, with its cells and structures, is far more complicated than some computer. So, why do we say that it lacked a builder/designer, while the computer had one? 
 \subsection{The Argument}
@@ -53,6 +53,8 @@ This is the second jump in the reasoning and is the one which is found across th
 This is an attack on the first line of the argument. It only attacks why we think that it’s true. The argument itself is valid. The first line seems intuitive, seems right, because of the examples used. The examples pointed to are things like watches and computers, very complex things which obviously needed to have some kind of designer. But the analogy between natural complexities and a watch seemingly has strength to it, but in actuality, the similarity is quite weak. There are many commonalities between two kinds of watches, but the commonality between the eye and a watch is that both are complex, there is nothing more to go on. When the analogy is weak, the conclusion from the analogy is equally weak.
 
 Here are two arguments, so that you can see the weakness of the analogy. If you accept the first, based solely on the reasoning used, then you will also need to accept the second:
+
+
 \noindent
 \begin{tabular}{p{2.75in}|p{2.75in}}
 Brain Argument&Guns Argument\\\hline
@@ -73,6 +75,8 @@ This is shown by looking at the jump found in line 3 of the argument. This was:
     \begin{center}The only thing which could have designed the complex structures in the natural world is God.\end{center}
 
 The point here is that even if we assume that there was a designer, we do not get that this designer was all-knowing, all-powerful, and all-good. More over, we do not get that there was only one designer. For example, in the designing of a new watch, rarely is it one person, but a team of people working together. There is no reason to think that the divine designer of the human eye was the same who designed the brain, and there is no reason to think that either or both of those designers was any of the tripartite features ascribed to God. Following the same sort of structure as before, if you like the first argument, then you will also need to like the second:
+
+
 \noindent
 \begin{tabular}{p{2.75in}|p{2.75in}}
 Bodies Argument&Pyramids Argument\\\hline
@@ -164,23 +168,23 @@ This seems sort of self-evident, but might be worth explanation. Think of where 
 
 \subsection{2. Everything which is a cause has itself a cause other than itself (directly or indirectly).}
 
-This is mostly an expansion/explanation of the first line, meaning that there are no existing things which weren't caused to exist by something previous to them in a chain. As I noted in parentheses above, there is an issue if you allow for backwards time-travel. In such a case, it would be possible for a thing/person to cause themselves to exist. For example, take this case from the Futurama episode "Roswell that Ends Well":
+This is mostly an expansion/explanation of the first line, meaning that there are no existing things which weren't caused to exist by something previous to them in a chain. As I noted in parentheses above, there is an issue if you allow for backwards time-travel. In such a case, it would be possible for a thing/person to cause themselves to exist. For example, take this case from the Futurama episode ``Roswell that Ends Well":
 
-    \factoidbox{Philip Fry travels back in time to Roswell, New Mexico in the year 1947, where his 'grandfather' was stationed. As events play out, Fry ends up causing the death of his 'grandfather'. But, Fry does not fade away to nothing, and though some faulty reasoning, comes to believe that the woman he is consoling is not in fact his grandmother (she is, though), and Fry ends up sleeping with her. As a result, she becomes pregnant and Fry becomes his own grandfather.}
+    \factoidbox{Philip Fry travels back in time to Roswell, New Mexico in the year 1947, where his `grandfather' was stationed. As events play out, Fry ends up causing the death of his `grandfather'. But, Fry does not fade away to nothing, and though some faulty reasoning, comes to believe that the woman he is consoling is not in fact his grandmother (she is, though), and Fry ends up sleeping with her. As a result, she becomes pregnant and Fry becomes his own grandfather.}
 
-Here, we have a case where, thanks to time-travel, a person was their own cause. This can be an issue for this argument, but it's better as the 'Not a Proof' objection in the next page. 
+Here, we have a case where, thanks to time-travel, a person was their own cause. This can be an issue for this argument, but it's better as the `Not a Proof' objection in the next section. 
 
 \subsection{3. There are things which exist.}
 
-This is another one of those 'no duh' sort of lines. Basically, it points out that these non-looped causal chains are in the world and need some kind of explanation. So, using an interesting jump in the reasoning (which will be pointed out later), we get the next line:
+This is another one of those `no duh' sort of lines. Basically, it points out that these non-looped causal chains are in the world and need some kind of explanation. So, using an interesting jump in the reasoning (which will be pointed out later), we get the next line:
 
 \subsection{4. So, there must have been a first cause to kick start the chain.}
 
-As always, the word 'so' indicates that we have an intermediate conclusion, this means that it's supposed to follow from the previous lines, whether or not it does is a different question. Basically, the reasoning here is that since there are things in the world, and everything needs to have a cause other than itself, there needs to have been something to start it, something which got the ball rolling. 
+As always, the word `so' indicates that we have an intermediate conclusion, this means that it's supposed to follow from the previous lines, whether or not it does is a different question. Basically, the reasoning here is that since there are things in the world, and everything needs to have a cause other than itself, there needs to have been something to start it, something which got the ball rolling. 
 
 \subsection{5. If there was a first cause, that cause was God.}
 
-This sort of jump should look familiar, as it is found in both the Design and the Fine-Tuning Arguments. This jump is often found when people look at the big bang and ask "OK, what caused that?" When they find they get something like "hey, we don't know" they jump to God. This jump is just as exploitable as it was in the previous arguments. And this is where, from this line and the previous, we get the conclusion:
+This sort of jump should look familiar, as it is found in both the Design and the Fine-Tuning Arguments. This jump is often found when people look at the big bang and ask ``OK, what caused that?" When they find they get something like ``hey, we don't know" they jump to God. This jump is just as exploitable as it was in the previous arguments. And this is where, from this line and the previous, we get the conclusion:
 
 \subsection{6. Therefore, God exists.}
 
@@ -197,7 +201,7 @@ In some versions of the argument, they are not careful with their phrasing and c
     \item If that cause was Meta-God, then Meta-God exists.
     \item Therefore, Meta-God exists
 \end{enumerate}
-All I did here was apply the exact same reasoning which the First Cause argument uses to get that God exists, but applied it to God Himself (with the same restrictions). Since I am not a fan of taking on the letter of an argument and I prefer to attack the spirit of it, I have made this argument stronger by limiting the 'things' to objects in the natural world.  Many of the versions found in popular culture have this error and this saddens me because it's such an easy fix:
+All I did here was apply the exact same reasoning which the First Cause argument uses to get that God exists, but applied it to God Himself (with the same restrictions). Since I am not a fan of taking on the letter of an argument and I prefer to attack the spirit of it, I have made this argument stronger by limiting the `things' to objects in the natural world.  Many of the versions found in popular culture have this error and this saddens me because it's such an easy fix:
 \begin{enumerate}
     \item Everything in the natural world has a cause other than itself.
     \item Everything which is a cause in the natural world has itself a cause other than itself.
@@ -211,10 +215,12 @@ This version, also, has its own problems which are in the very spirit of the arg
 
 This argument makes two background assumptions each of which can be used to show that it does not take all relevant possible cases into account, and thereby not really work as a proof. First, the argument assumes that the series of cause and effect can’t go back infinitely. But, this assumption requires its own argument to prove and may be intuitive because of our limited understanding of the earliest moments in the universe. This under-supported assumption does imply that there must have been a first cause. But, if you look at that assumption, there’s no reason to think that.
 
-More over, the second line of the argument claims that nothing (at least in the natural world) can, directly or indirectly, cause itself to exist. But, in the previous page, I gave a seemingly possible case, assuming that you can have time-travel, where circular causation occurs. The chain doesn't, in a sense, continue back indefinitely and it does not have a first cause. Applying this to the universe itself and without the need for time-travel, it could be the case that all of time is circular, where the cause of the 'first' moment of the universe was the 'last' moment of the universe. This can be confusing, as in a circular model of time, ordering moments in terms of 'first' and 'last' is misleading, there are no such moments. 
+More over, the second line of the argument claims that nothing (at least in the natural world) can, directly or indirectly, cause itself to exist. But, in the previous page, I gave a seemingly possible case, assuming that you can have time-travel, where circular causation occurs. The chain doesn't, in a sense, continue back indefinitely and it does not have a first cause. Applying this to the universe itself and without the need for time-travel, it could be the case that all of time is circular, where the cause of the `first' moment of the universe was the `last' moment of the universe. This can be confusing, as in a circular model of time, ordering moments in terms of `first' and `last' is misleading, there are no such moments. 
 \subsection{Problem 3: Limitations of the conclusion}
 
 Just like with the other arguments for the existence of God, even if we accept all of their reasoning, there is still the jump. There is no reason to think that the first cause was God or any being with one or more of the tripartite features of God. It could have been a really evil kid playing with the equivalent of an ant farm. The universe could have been his ant farm. To illustrate this using other examples, take these. As before, if you accept the reasoning in the First Cause Argument, then you must also accept these, which are equally strong arguments:
+
+
 \noindent
 \begin{tabular}{p{2.75in}|p{2.75in}}
 Quantum Argument&FSM Argument\\\hline
@@ -230,7 +236,7 @@ Quantum Argument&FSM Argument\\\hline
 The left most argument, if I remember correctly, is roughly one given by Steven Hawking when there was a debate about this topic between physicists and theologians, but this was many years ago.
 
 \section{The Ontological Argument}
-To start us off, I will define a special term, which you might have encountered before. \Gls{ontology}, properly speaking, is an area of philosophy dealing with existence. It is the study of being, becoming, and some features of reality relating to existence.  I spent the majority of my undergraduate work dealing with these sorts of questions as it relates to time and also to composition. Sometimes, Ontology is called "Metametaphysics", but Metametaphysics tends to be more of Meta-ontology.  
+To start us off, I will define a special term, which you might have encountered before. \Gls{ontology}, properly speaking, is an area of philosophy dealing with existence. It is the study of being, becoming, and some features of reality relating to existence.  I spent the majority of my undergraduate work dealing with these sorts of questions as it relates to time and also to composition. Sometimes, Ontology is called ``Metametaphysics", but Metametaphysics tends to be more of Meta-ontology.  
 
 \newglossaryentry{ontology}
 {
@@ -262,7 +268,7 @@ This definition does rely on a few things, which weaken the letter, but not the 
 \begin{center}
 "The being such that there is nothing can be greater than it."
 \end{center}
-Essentially, we are saying that God is the greatest possible being, in all respects. But, first off, are we talking about the same thing? Some could easily argue yes. When it comes to power, nothing can be more powerful than God (as Anselm defined the term), so God is all-powerful. Nothing can know more than God, so God is all-knowing. With goodness, we run into an interesting point though. Anselm thinks, as many do, that evil is the absence of good, so 'the greatest evil' is a misnomer and it should be 'the least good'. This means that God can't be the greatest evil possible, but is the greatest good.  
+Essentially, we are saying that God is the greatest possible being, in all respects. But, first off, are we talking about the same thing? Some could easily argue yes. When it comes to power, nothing can be more powerful than God (as Anselm defined the term), so God is all-powerful. Nothing can know more than God, so God is all-knowing. With goodness, we run into an interesting point though. Anselm thinks, as many do, that evil is the absence of good, so `the greatest evil' is a misnomer and it should be `the least good'. This means that God can't be the greatest evil possible, but is the greatest good.  
 
 Remember that Ontological Arguments look at the very nature of a thing to show that it must exist. Does being the greatest in everything imply that God exists? According to those who like this argument, YES! And here is their argument:
 
@@ -296,6 +302,8 @@ Remember how we defined God, God is the greatest possible being. What is true fo
 This was actually the inspiration behind my versions of the arguments seen in the Limitation of the Conclusion sections. It is easy to imagine the absolutely perfect island. Perfect weather, wildlife, beach, and so on (think Hawai’i without the tourists). But, that island would be more perfect if it existed (same reasoning as before). This island is the most perfect island, therefore, the perfect island must exist. We can do that for the perfect taco, the perfect wife/husband, or anything, the perfect version of it must exist. Now I have to ask, where is my perfect island?
 
 This is the Ontological Argument's equivalent of Limitation of Conclusion, but you need to be a little more careful about the counter examples used.  Sometimes, the example won't work because of the nature of the thing, for example, the perfect fictional character can't be used for this because the perfect fictional character can't exist, because then it would not be fictional. Take for example, these two arguments, which follow the same reasoning as the Ontological Argument:
+
+
 \noindent
 \begin{tabular}{p{2.75in}|p{2.75in}}
 Significant Other Argument&Ontological Argument\\\hline
@@ -330,7 +338,7 @@ plural=Problems of Evil
 }
 
 
-First, we have what I'll call \gls{man-made evil}. These are also sometimes called 'moral evils'. Man-made evils are the sufferings which people cause, the 'bad' things we do. Do not get hung up on the use of the word 'evil'. We will see later why good and evil aren't relative or cultural, but evil, in either case, here concerns suffering, which is not a man-made concept. Man-made evils are things like torture, murder, famine (yes, famines are man-made), and so on. 
+First, we have what I'll call \gls{man-made evil}. These are also sometimes called `moral evils'. Man-made evils are the sufferings which people cause, the `bad' things we do. Do not get hung up on the use of the word `evil'. We will see later why good and evil aren't relative or cultural, but evil, in either case, here concerns suffering, which is not a man-made concept. Man-made evils are things like torture, murder, famine (yes, famines are man-made), and so on. 
 
 \newglossaryentry{man-made evil}
 {
@@ -340,7 +348,7 @@ plural=man-made evils
 }
 
 
-Second, we have\gls{natural evil}. This is the kind of suffering which is not caused by man, but nature doing its thing. Since we are talking about suffering when we use the term 'evil', it should be clear that natural evils are a thing, because there are some sufferings caused by nature doing as it does. Here we have things like earthquakes, disease, volcanic eruptions, tornado, and sharknados. 
+Second, we have\gls{natural evil}. This is the kind of suffering which is not caused by man, but nature doing its thing. Since we are talking about suffering when we use the term `evil', it should be clear that natural evils are a thing, because there are some sufferings caused by nature doing as it does. Here we have things like earthquakes, disease, volcanic eruptions, tornado, and sharknados. 
 
 \newglossaryentry{natural evil}
 {
@@ -369,14 +377,14 @@ This is the claim that God allows for evil in the world because it leads to grea
 
 If this suffering had not happened, we would not have the good of having these sorts of role models, people who would fight members of their own religion to protect people outside of that circle. We would not have the good of these heroes being in the world.
 
-An alternative version of this, which does escape some of the problem below is called the soul-making theodicy. This is that God allows for evil in the world to refine people, to make them better, a good which could not otherwise be gotten. Some philosophers really like this soul-making theodicy, stating that the purpose of evil is to allow free beings to grow and develop into those of the "finest characteristics". The Christian philosopher John Hick proposes this sort of reasoning in his work.\autocite{Hick1} Other reasons like this are related: For example, God allows for evil as a test of faith and guides people towards God and stronger faith, again something which is said to not be able to get otherwise. This explanation for evil seems to be quite popular among classical Islamic philosophers.\autocite{Rouzati1}
+An alternative version of this, which does escape some of the problem below is called the soul-making theodicy. This is that God allows for evil in the world to refine people, to make them better, a good which could not otherwise be gotten. Some philosophers really like this soul-making theodicy, stating that the purpose of evil is to allow free beings to grow and develop into those of the ``finest characteristics". The Christian philosopher John Hick proposes this sort of reasoning in his work.\autocite{Hick1} Other reasons like this are related: For example, God allows for evil as a test of faith and guides people towards God and stronger faith, again something which is said to not be able to get otherwise. This explanation for evil seems to be quite popular among classical Islamic philosophers.\autocite{Rouzati1}
 
 The problem with this is that much of the natural evils in the world are not recorded, we are not called to arms against them, and therefore could not have served to create the greater good. (Things like genetic diseases which lead to a slow and painful death are great examples, especially when there is no possible cure).
 
 \section{The Artful Analogy}
 Some claim that the world is like God’s canvas, He is painting a picture. There are shades of good everywhere and so too are there shades of evil. The contrasting elements of good and evil make the picture more beautiful than if it was only all shades of good. The goodness of the world is a product of the harmony between these shades of good and evil. Philosophers who have liked this kind of view, or at the very least wrote something which is akin to it include: Leibniz in his Theodicy\autocite{Leibniz1}. (paragraph number 213) and Augustine in his Confessions (book 7, chapters 13-16).\autocite{Augustine1} For Augustine, evil is there to make a more beautiful, harmonious whole of creation. We can't see the whole picture because we aren't God. 
 
-An apt analogy for this idea is to take two pictures (and for this analogy, the darker the shade, the more 'evil' it's meant to represent) and compare them. The first is just a blank white canvas, the other is a photo-realistic black-and-white picture of a rose. Which of these would you say is more beautiful? The rose or the blank canvas?
+An apt analogy for this idea is to take two pictures (and for this analogy, the darker the shade, the more `evil' it's meant to represent) and compare them. The first is just a blank white canvas, the other is a photo-realistic black-and-white picture of a rose. Which of these would you say is more beautiful? The rose or the blank canvas?
 
 There are two major problems for this. The first is that it is hard to believe. Why would it be the case that a baby born with Tay-Sachs disease (a genetic disease which leads to a slow, painful, guaranteed death) would help the overall harmony of the world. Since God allows for so much evil and only God can see the picture, so to speak, then God must not be all-good in our sense, but in some other sense.True art is an explosion!
 
@@ -417,7 +425,7 @@ There are a few problems for the Free Will Defense, and they can be broken up in
 
 This question relates to the first line of the argument, which claimed that any world with free will is going to be better than one without it. But, is that so obvious? The suffering in the world can be so great that it would make sense to want this possibility to go away. Here is a case to think about:
 
-    \factoidbox{Imagine, if you will, two worlds, the first is a world with all of the suffering and anguish which is present in ours. In this world, people have this Libertarian Free Will. From a first person perspective, one could not tell the difference between 'making a choice' in this world vs in the world we presently live in. The second world is one without the vast majority of the suffering which we inflict on each other. For example, WW2 never happened in this world. This decrease in suffering is because there's no Libertarian Free Will in this world. Making a choice in this world, from a first person perspective, would feel exactly the same as making a choice in the world with free will. A person could not tell the difference. Which would you chose to live in? The one with unnecessary moral evils or the one without?}
+    \thoughtex{A World Without Free Will}{Imagine, if you will, two worlds, the first is a world with all of the suffering and anguish which is present in ours. In this world, people have this Libertarian Free Will. From a first person perspective, one could not tell the difference between `making a choice' in this world vs in the world we presently live in. The second world is one without the vast majority of the suffering which we inflict on each other. For example, WW2 never happened in this world. This decrease in suffering is because there's no Libertarian Free Will in this world. Making a choice in this world, from a first person perspective, would feel exactly the same as making a choice in the world with free will. A person could not tell the difference. Which would you chose to live in? The one with unnecessary moral evils or the one without?}{NOWW2.jpg}
 
 Similarly, we can there are certain moral evils which I will never get the chance to preform. For example, I will never get the opportunity to kick the pope in the shin. What if all evil acts were like that? What if people were never given the opportunity to do the evil acts or everyone had a moral character such that they would never do such things. Sure, they are possible, but we never get the chance to do them or would never do them. Am I less free because of my lacking the opportunity?
 \subsection{Do We Actually Have it?}
@@ -427,13 +435,15 @@ That last note leads us into an interesting other problem. Do we actually have f
 
 This one is related to the second kind of objection, namely, whether or not we have free will, but ties in to the second kind. One could argue that this objection gets the relevant parts of both. In this case we are asking whether it's possible to have free will without having the possibility to actually act/do evil. Much like the case which I gave before. The argument goes like this:
 
-    It is possible for all people to have free will and yet never bring about evil.
-    God can bring about any possible situation.
-    Therefore, God could bring about such a situation.
+\begin{enumerate}
+   \item It is possible for all people to have free will and yet never bring about evil.
+    \item God can bring about any possible situation.
+    \item Therefore, God could bring about such a situation.
+\end{enumerate}
 
 The issue here for FWD is that if this is possible, there's a better world than the one we have and therefore God didn't make the best one, taking all of the wind out of the sails of FWD.  There have been some replies to this argument which are worth noting.
 
-First, initially, people like to reject the first premise and claim that God could not have made a world like that. Saying something along the lines of "that would not really be free will!" However, going this route faces issues on its own. First, many claim that God is free but at the same time He/She does not bring about evil. So, as a result, why would it be impossible for man to be free and never bring about evil? Second, if we try to reject the first line, many of us think that God never wants us to commit evil acts. And yet, if we reject this line, it would mean that God is wishing for the impossible.
+First, initially, people like to reject the first premise and claim that God could not have made a world like that. Saying something along the lines of ``that would not really be free will!" However, going this route faces issues on its own. First, many claim that God is free but at the same time He/She does not bring about evil. So, as a result, why would it be impossible for man to be free and never bring about evil? Second, if we try to reject the first line, many of us think that God never wants us to commit evil acts. And yet, if we reject this line, it would mean that God is wishing for the impossible.
 
 If you chose to reject the second line instead, you would be claiming that there are certain possible situations which God could not bring about. For example, it is possible for me to freely type this passage, but it's not possible for God to make it the case that I freely type this passage because then it would not have been freely done; there's a contradiction. However, this particular route does not help in this case, it just shows that there are certain possible cases which God can't bring about. This, in turn, leads us down yet another rabbit hole about the very nature of being all-powerful. But, this also doesn't help because we can look at cases where people just aren't ever given the opportunity to act in certain ways. For example, it's a very serious possibility that I will never be given the opportunity to kick the pope in the shin. Although I would not want to do this, as a matter of fact, the fact remains that I will never be given the chance to do it. God could, quite easily, it would seem, make it the case that all opportunities to commit evil acts are like mine when it comes to kicking the pope in the shin, man is just never given the chance to do them. Would you say that I am less free because of this lack? If you say no, then we can have a world without evil and free will.
 \subsection{Miracles}
@@ -445,7 +455,7 @@ People typically think that God intervenes in the world through miracles. But wh
 The reply to this is typically that if God intervened then it would not be free will… But this doesn’t really sit with the idea of miracles.
 
 \section{The Problem of Natural Evil}
-The Free Will Defense, if it can surmount the problems which we have seen previously, would be able to handle the problem of evil, but only in a restricted sense. The Free Will Defense can only handle Man-Made Evil. But, there are other kinds of evils in the world. Remember, we also have Natural Evils to contend with. Remember, also, that whatever doesn't kill the Problem of Evil only makes it stronger. This leads us to the Problem of Natural Evil (or PONE, because it 'PONEs' the Free Will Defense). There is no real connection (at least from the view of a non-believer) between free will and the plague, earthquakes, volcanic eruptions, etc. This argument is taking this into account. Rather than taking evils as any old kind of 'bad' in the world, here we will focus on natural evils, the pain and suffering caused by nature doing its thing. 
+The Free Will Defense, if it can surmount the problems which we have seen previously, would be able to handle the problem of evil, but only in a restricted sense. The Free Will Defense can only handle Man-Made Evil. But, there are other kinds of evils in the world. Remember, we also have Natural Evils to contend with. Remember, also, that whatever doesn't kill the Problem of Evil only makes it stronger. This leads us to the Problem of Natural Evil (or PONE, because it `PONEs' the Free Will Defense). There is no real connection (at least from the view of a non-believer) between free will and the plague, earthquakes, volcanic eruptions, etc. This argument is taking this into account. Rather than taking evils as any old kind of `bad' in the world, here we will focus on natural evils, the pain and suffering caused by nature doing its thing. 
 \begin{enumerate}
     \item There are natural evils in the world.
     \item If God exists, He is all-knowing, all-powerful, and all-good.
@@ -470,14 +480,14 @@ This one has the same issues as before, but also one unique to it. For example, 
 
 \subsection{The Fall Reply}
 
-Forgive me for my lack of familiarity with the creation story in Christianity and other Abrahamic religions Some claim that the natural evils in the world are not God’s doing, but are the doing of Adam and Eve in the Garden of Eden. This causes all natural evils to actually be man-made evils, which the Free Will Defense seems to be able to handle (maybe). In eating the apple, they created all of the natural evils in the world. We can think of the natural evils in the world as the punishment for Adam and Eve's initial breaking of the rule "don't eat from this tree." This sort of response is often found coming from the Biblical literalists, those who hold that the Earth was created in 7 days and all that. 
+Forgive me for my lack of familiarity with the creation story in Christianity and other Abrahamic religions Some claim that the natural evils in the world are not God’s doing, but are the doing of Adam and Eve in the Garden of Eden. This causes all natural evils to actually be man-made evils, which the Free Will Defense seems to be able to handle (maybe). In eating the apple, they created all of the natural evils in the world. We can think of the natural evils in the world as the punishment for Adam and Eve's initial breaking of the rule ``don't eat from this tree." This sort of response is often found coming from the Biblical literalists, those who hold that the Earth was created in 7 days and all that. 
 
 There are a few issues with this reply, however. First, if God is all-good, then it would seem that He would need to be all-just (as in, never violating justice). Does it seem fair or correct, morally speaking, to punish the children for the actions of their parents? This seems especially wrong when the punished did not in anyway benefit from the transgression. For example, suppose that hundreds of years ago, my ancestor attempted to steal a pig. This pig ran away and back to the owner. The laws of the day say that even attempted pig stealing in punishable with the removing of the thumbs. Luckily, my ancestor was not caught. Generations down the line, it's discovered that my ancestor did this. Would it be morally permissible for them to punish me for the attempted theft, even though I had nothing to do with it? Is it OK to punish someone for the actions of their ancestor thousands of years ago?
 
-Notice that I said "thousands of years ago". The second issue with this reply is that it requires that the story of Adam and Eve be an actual historical event. This can't be merely mytho-historic (where we say we came from). There are multiple cases where this does not line up with science and other reliable aspects of the world. But, if those can be surmounted, then this would not be an issue.
+Notice that I said ``thousands of years ago". The second issue with this reply is that it requires that the story of Adam and Eve be an actual historical event. This can't be merely mytho-historic (where we say we came from). There are multiple cases where this does not line up with science and other reliable aspects of the world. But, if those can be surmounted, then this would not be an issue.
 \subsection{The Demon Reply}
 
-This reply is often cited to St. Augustine and it sort of has a feel like the phrase "the Devil made me do it". This follows from a similar line of thought as the Fall Reply, but also from a similar line of thought as the Free Will Defense. Here, like with the Fall Reply, they are trying to make a connection between these natural evils and 'moral evils' (evils by free agents (not necessarily human)). The claim is that God did not just give free will to humans, but also to certain divine beings (angels). This means that the actions of these divine entities are explained away as man-made evils, and God is not responsible for it. When Lucifer and the other Fallen rebelled, they did so freely. It's those Fallen angels which cause the 'natural' evils in the world.  Since man's free will allows for us to do evil and it's still good, these demons are in the same sort of camp. In fact, many demons are claimed to be responsible for various kinds of natural disasters.  Such as Furfur who is said to create tempests.
+This reply is often cited to St. Augustine and it sort of has a feel like the phrase ``the Devil made me do it". This follows from a similar line of thought as the Fall Reply, but also from a similar line of thought as the Free Will Defense. Here, like with the Fall Reply, they are trying to make a connection between these natural evils and `moral evils' (evils by free agents (not necessarily human)). The claim is that God did not just give free will to humans, but also to certain divine beings (angels). This means that the actions of these divine entities are explained away as man-made evils, and God is not responsible for it. When Lucifer and the other Fallen rebelled, they did so freely. It's those Fallen angels which cause the `natural' evils in the world.  Since man's free will allows for us to do evil and it's still good, these demons are in the same sort of camp. In fact, many demons are claimed to be responsible for various kinds of natural disasters.  Such as Furfur who is said to create tempests.
 
 The responses to this sort of reply are varied. I encourage you to think of some and try them out in your heads.
 \subsection{The Punishment Reply}
