--- a/modsix.tex
+++ b/modsix.tex
@@ -89,7 +89,7 @@ As you can see, if he were in a very realistic dream, then he would still have s
 He believes that there is an all good God, but how could this fit with being mistaken in this way? If allowing a person to be mistaken did not jive with God, He would not allow it. But He does, we are mistaken all the time, so allowing a person to be mistaken must be just fine by God.
 
 \subsection{The Evil Demon Case (this is section 12)}
-Here we have the Evil Demon, which is the thought experiment strong enough to discredit all knowledge gained from the senses. This thought experiment is the basis for many books, movies, and shows.\footnote{need to list examples} In plain language, his introduction of this case goes like this:
+Here we have the Evil Demon, which is the thought experiment strong enough to discredit all knowledge gained from the senses. This thought experiment is the basis for many books, movies, and shows.\footnote{Some examples include: The Matrix (1999), The Truman Show (1998), The Lego Movie (2014), Sword Art Online (2012-present), Inception (2010), Pan’s Labyrinth (2006), The Village (2004), Dark City (1998), The Signal (2014), Shutter Island (2010), and The Island (2005).} In plain language, his introduction of this case goes like this:
  
 \factoidbox{I will suppose that some Evil Demon has employed all of their power to deceive me. All of my senses and the things which I learned from them are nothing more than either illusions or are the product of the Demon’s deceptions. I will consider myself as without  a body or anything external to the mind, as they are, too, illusions by the Demon. But this this is a really hard job, and difficult to maintain; so I tend to fall back into thinking that the external world is indubitable when I leave my armchair. This tendency does not mean that they are, in fact, indubitable, but rather, that we have a built in bias.}
 \section{Descartes' Second Meditation}
@@ -123,7 +123,7 @@ Even an evil deceiver could not deceive Descartes about his belief that he think
 The problem Descartes faces at this point is how to justify his beliefs about the external world based on the very narrow foundation of his indubitable beliefs about the contents of his own mind. And this brings us to one of the more famous arguments in philosophy: Descartes’ “Cogito Ergo Sum” or “I think, therefore I exist.” Descartes argues that if he knows with certainty that he thinks, then he can know with certainty that he exists as a thinking being. Many philosophers since then have worried about the validity of this inference. Perhaps all we are entitled to infer is that there is thinking going on and we move beyond our indubitable foundation when we attribute that thinking to an existing subject (the “I” in “I exist”). There are issues to explore here too. 
 
 \section{Descartes' Third Meditation}
-At this point, Descartes only has two justified beliefs. One is about his thoughts (the content of his mind) and the other is about his own existence (I think therefore I am). At the moment, he doesn't have any knowledge, or at least justified beliefs about anything outside of his mind. For example, he can't say "I know I have hands" or "I know there's a piece of paper in front of me."
+At this point, Descartes only has two justified beliefs. One is about his thoughts (the content of his mind) and the other is about his own existence (I think therefore I am). At the moment, he doesn't have any knowledge, or at least justified beliefs about anything outside of his mind. For example, he can't say ``I know I have hands" or ``I know there's a piece of paper in front of me."
 
 Also, Descartes doesn't have any information about truths we know through reason alone, like 2+2=4 or other things like that. Those just don't have the justification yet. To get some basis to justify that stuff, Descartes sets out to prove that God exists and is not like his evil demon. Once the evil deceiver hypothesis is taken out because of God, facts we get from reason and perhaps those from our senses could get the justification to be knowable. However, not just any argument for the existence of God and that God's all-good will do the trick (we will be looking into a lot of different arguments for the existence of God in Module 5). The trick for Descartes’ project of a rational reconstruction of knowledge is to prove the existence of a good God by reasoning using only those beliefs that he has identified as indubitable and foundational.
 
@@ -169,7 +169,7 @@ Some might try to answer the question ``what is knowledge?'' with a relatively s
 
 I quickly recognized what was missing: adequate \gls{justification}. The structure of his reasoning, though it lead to the correct answer, wasn't accurate. As a result, merely being correct is not enough for us to claim that we knew it. At the same time, merely having reasons to think that the belief is true is not enough to say that you knew it. Here is a, relatively, classic example of justification going astray. There have been various thought experiments which follow this line of thought, but I will go with the one which is earliest, as far as I am aware, from Alexius Meinong: 
 
-\factoidbox{Imagine that you live near a park and most days at noon, a violinist plays. You can hear the beautiful music from your dinning room and, it seems right to say that if you hear the music, then you know that the violinist is playing. However, one day, because you, unknowingly, drank some bad tea, at noon, you go temporarily deaf and have an auditory hallucination of a violin playing. While it is true that the violinist is out there and you hear the music, does it follow that you know the violinist is out there?}
+\thoughtex{The Park Violinist}{Imagine that you live near a park and most days at noon, a violinist plays. You can hear the beautiful music from your dinning room and, it seems right to say that if you hear the music, then you know that the violinist is playing. However, one day, because you, unknowingly, drank some bad tea, at noon, you go temporarily deaf and have an auditory hallucination of a violin playing. While it is true that the violinist is out there and you hear the music, does it follow that you know the violinist is out there?}{parkviolinist.jpg}
 
 For cases like these, most people would say that, though you were right, you don't know that the violinist is playing. The reason, as before, is that there was something wrong with the justification. 
 
@@ -201,7 +201,7 @@ For this, we see that my beliefs form a pyramid, or tower, like structure, which
 \section{Foundationalism}
 Much of the debate in Epistemology, as I mentioned, centers around justification. There are three dominate theories of justification which we will cover. Doing a little introspection should make it clear that some beliefs are built upon others. One belief is justified by another belief. For a particularly strange example, take this case: 
 
-\factoidbox{I believe that the Earth is actually a dodecahedron. It is not spherical but it is also not flat. I believe this because I think that the middle of two extremes is the most  likely to be accurate. I also believe that there are two extreme stances in the debate over the shape of the Earth. One side claims that the Earth is spherical while the other side claims that the Earth is a flat disk. The two beliefs about the extreme stances with the general belief about the accuracy of a middle ground leads me to the conclusion that the Earth must be a dodecahedron.} 
+\thoughtex{Cube Earth}{I believe that the Earth is actually a cube. It is not spherical but it is also not flat. I believe this because I think that the middle of two extremes is the most  likely to be accurate. I also believe that there are two extreme stances in the debate over the shape of the Earth. One side claims that the Earth is spherical while the other side claims that the Earth is a flat disk. The two beliefs about the extreme stances with the general belief about the accuracy of a middle ground leads me to the conclusion that the Earth must be a cube.}{CubeEarth.jpg} 
 
 You might notice that this reasoning is much like an argument which we have seen previously. I have given reasons and some general principles to connect them. Laid out this way, we can diagnose what went wrong with the justification. It is correct that there are two extremes in the debate over the shape of the Earth and their descriptions are, roughly, accurate. The issue lies in the principle which links them together. The middle of two extremes is not always the most accurate. This causes us to come to the wrong conclusion. The debate about justification is how the beliefs either need to relate to each other or the sort of cement used to link them together.
 
@@ -240,9 +240,9 @@ plural=Infinite Regress Theory
 }
 
 
-Some of you might have heard the phrase 'it's turtles all the way down', which has a humorous story behind it.  This story has changed and mutated quite a bit with time, but it gets the general idea:
+Some of you might have heard the phrase `it's turtles all the way down', which has a humorous story behind it.  This story has changed and mutated quite a bit with time, but it gets the general idea:
 
-    \factoidbox{Long ago, a philosopher was giving a lecture to the public. In it, they mention the structure of the solar system and the planets. Afterwards, an older lady comes up to the philosopher and says ``your theory that the sun is at the center and the Earth is a ball is very convincing, but I have a better one." Amused, the philosopher asks about it and she replies ``we live on the crust of the Earth which rests on a turtle's back." Instead of demolishing her stance with evidence, the philosopher chose to follow Socrates and ask follow-up questions, ``if that is correct, ma'am, then what does the turtle stand on?" Equally amused, the lady replied ``the first turtle stands on the back of a second turtle." ``But," replied the philosopher, ``what does the second turtle stand on?" She then said ``why, the back of yet another, bigger turtle, it's no use, Mister, it's turtles all the way down."}
+    \thoughtex{Turtles All The Way Down}{Long ago, a philosopher was giving a lecture to the public. In it, they mention the structure of the solar system and the planets. Afterwards, an older lady comes up to the philosopher and says ``your theory that the sun is at the center and the Earth is a ball is very convincing, but I have a better one." Amused, the philosopher asks about it and she replies ``we live on the crust of the Earth which rests on a turtle's back." Instead of demolishing her stance with evidence, the philosopher chose to follow Socrates and ask follow-up questions, ``if that is correct, ma'am, then what does the turtle stand on?" Equally amused, the lady replied ``the first turtle stands on the back of a second turtle." ``But," replied the philosopher, ``what does the second turtle stand on?" She then said ``why, the back of yet another, bigger turtle, it's no use, Mister, it's turtles all the way down."}{TurtlesDown.jpg}
 
 Infinite Regress Theory follows a very similar line of thought. Rather than their being foundational beliefs, in order to have knowledge, there must be beliefs all the way down.  However, having an infinite chain of knowledge doesn't, on its own, give us knowledge. For example, suppose that there's at least 0 soda cans on my desk. Here is a chain of beliefs; if there's at least 2 soda cans on my desk, then there's at least 1; if there are 3 soda cans on my desk then there are at least 2; if there are 4... Continuing for all numbers. None of these beliefs are really justified,  the chain will never reach back to reality and justify my claim that there's no soda cans on my desk. This also means that, if this theory is correct, knowledge is impossible and Global Skepticism is the way to go. 
 
