--- a/preface.tex
+++ b/preface.tex
@@ -21,8 +21,8 @@ There are other questions which we will ponder as the course progresses, such as
 
 Like I just said, philosophy is critical thinking taken to an extreme... But why should the average person be concerned with it? When a person wants to be able to lift heavier objects, they train by lifting weights. Training with heavier weights (eventually) makes the smaller amount that they need to carry easier. The mind is no different. Working with an extreme, outlandish, and hard question, knowing how to think about them and the rules for good critical thinking will make debate and reasoning in every day contexts easier.
 
-There are other, potentially more practical or financial, reasons to study Philosophy. Many of you might think that the humanities, like English, Art, and Philosophy, aren't the best way to make a living. Your parents might say something like "O, you want to get a major in Philosophy? Great, there's a new Philosophy factory opening up down the street!" in a sarcastic way. This common thinking is because many don't see the value in Philosophy. For example, in 2015, in his Presidential bid, Marco Rubio regularly said things along the lines of "we need more welders, less philosophers!"\autocite{philervwelder2} He attempted to support this claim by implying or outright stating that welders make more money than those who got degrees in Philosophy.
+There are other, potentially more practical or financial, reasons to study Philosophy. Many of you might think that the humanities, like English, Art, and Philosophy, aren't the best way to make a living. Your parents might say something like ``O, you want to get a major in Philosophy? Great, there's a new Philosophy factory opening up down the street!" in a sarcastic way. This common thinking is because many don't see the value in Philosophy. For example, in 2015, in his Presidential bid, Marco Rubio regularly said things along the lines of ``we need more welders, less philosophers!"\autocite{philervwelder2} He attempted to support this claim by implying or outright stating that welders make more money than those who got degrees in Philosophy.
 
 Both of these claims are incorrect. On average, people with philosophy degrees make more money (yearly) than those who entered the welding trade.\autocite{weldersvphilers} When we compare the average pay for people with Philosophy degrees to other majors, we also see that those with this major make more money than any other humanities degree.\autocite{philermoney} Holders of this degree make more money than even the average business management degree holder and some STEM fields. 
 
-But why is this? Getting a degree in Philosophy doesn't make you 'pre-packaged' with the skills to enter a particular job (like going to a trade school), rather a degree in Philosophy and the classes which are entailed by it give you a more important, overarching set of skills, namely creative problem solving. Employers, the world over, are seeking those who can be given a problem and come up with creative or innovated ways of solving it. The courses you take in Philosophy give you significantly harder problems than those you would be presented with in those situations and this makes those problems so much easier for you to handle. Many famous CEOs and company founders got degrees in Philosophy. 
+But why is this? Getting a degree in Philosophy doesn't make you `pre-packaged' with the skills to enter a particular job (like going to a trade school), rather a degree in Philosophy and the classes which are entailed by it give you a more important, overarching set of skills, namely creative problem solving. Employers, the world over, are seeking those who can be given a problem and come up with creative or innovated ways of solving it. The courses you take in Philosophy give you significantly harder problems than those you would be presented with in those situations and this makes those problems so much easier for you to handle. Many famous CEOs and company founders got degrees in Philosophy. 
