--- a/IntroToPhil.tex
+++ b/IntroToPhil.tex
@@ -25,47 +25,28 @@
 \usepackage{xcolor}
 \usepackage{pagecolor}
 %\usepackage[tagged]{accessibility}
-\definecolor{philgreen}{RGB}{0,143,17}
+\definecolor{philgreen}{RGB}{11,56,111}
+%\definecolor{philgreen}{RGB}{0,143,17}
 \definecolor{lyallpink}{RGB}{222,31,149}
 \colorlet{leadbeater}{philgreen}
 \colorlet{dkleadbeater}{philgreen!80!black}
 \colorlet{ltleadbeater}{philgreen!50}
 \colorlet{vltleadbeater}{philgreen!3}
 \DeclareUnicodeCharacter{FE01}{}
+%\DeclareUnicodeCharacter{ ''}{ ``}
+
 \usepackage{afterpage}
 %\usepackage[tagged]{accessibility}
+ 
 \begin{document}
 
-\midsloppy
-
+\begin{textblock*}{5.625in}(0pt,0pt)%
+\noindent\includegraphics*[height=11in]{Questions We Have cover image 8.png}
+\end{textblock*} 
+%\begin{figure}[hbtp]\includegraphics[width=8.5in]{Questions We Have cover image 8.png}\end{figure}
 % Cover Page
-\thispagestyle{empty}
-\pagecolor{philgreen}\afterpage{\nopagecolor}
-\begin{textblock*}{\stockwidth}(0in,3.5in)
-\end{textblock*}
-\begin{textblock*}{0in}(0in,0in)
-  \noindent\hfill
-  \begin{minipage}[b][\stockheight][s]{.95\stockwidth}
-    \begin{center}
-      \vspace*{1.5cm}
-      %\hfill
-      \sffamily\fontsize{66pt}{0pt}\selectfont
-      \color{black}
-      \textbf{Questions We Have}%
-      \vskip0.5cm             
-      \color{white}
-      \sffamily
-      \fontsize{20pt}{22pt}\selectfont
-      \textbf{An Introduction to Philosophy} 
-      \end{center}
-\begin{raggedleft}
-      \fontsize{11pt}{14pt}\selectfont
-      \color{black}
-     \textbf{By Davis A. Smith}\\
-    \end{raggedleft}
-  \end{minipage}
-  \hspace*{1cm}
-\end{textblock*}
+%\thispagestyle{empty}\pagecolor{philgreen}\afterpage{\nopagecolor}\begin{textblock*}{\stockwidth}(0in,3.5in)\end{textblock*}\begin{textblock*}{0in}(0in,0in)  \noindent\hfill  \begin{minipage}[b][\stockheight][s]{.95\stockwidth}    \begin{center}      \vspace*{1.5cm}
+      %\hfill\sffamily\fontsize{66pt}{0pt}\selectfont\color{black}      \textbf{Questions We Have}%      \vskip0.5cm                   \color{white}      \sffamily      \fontsize{20pt}{22pt}\selectfont      \textbf{An Introduction to Philosophy}       \end{center}\begin{raggedleft}      \fontsize{11pt}{14pt}\selectfont      \color{black}     \textbf{By Davis A. Smith}\\    \end{raggedleft}  \end{minipage}  \hspace*{1cm}\end{textblock*}
 \ 
 \newpage
 \input{content}
