--- a/modeight.tex
+++ b/modeight.tex
@@ -4,7 +4,7 @@
 \chapter{Part 17: Normative Ethics}
 Our focus in this module will be normative ethics. It is worth noting that many people confuse normative ethics and descriptive ethics. Descriptive Ethics is the study of how people do, in fact, think about ethics. Different cultures and people think about ethics differently, this is fine and totally normal. Normative Ethics is concerned how we should be motivated and how we should act. Confusing these two has lead many people to moral relativism, but it's rooted in a confusion, not a fact. Confusing these two things also is the main support for the Cultural Differences Argument which we saw before. The project in Normative Ethics is to find a theory which best explains our moral intuitions and best describes universally held moral standards. One way to think of the difference is that Descriptive Ethics is the realm of sociology, while Normative Ethics is the realm of philosophy.  Different theories have been made to best describe our moral intuitions and are still being made, each improving on the last (so there is progress). 
 \section{Ethical Theories}
-As we saw in the last module, Moral Relativism just can't be correct. The reasons for supporting it contradict each other or it leads to truly awful beliefs. If we still want to be Moral Realists, then we are going to need to go with something objective, a theory of morality which has a set of rules or guiding principles to tell us what to do.  Trying to answer this question has lead down two different paths, the first we will cover belongs to the \Glspl{consequentialism}, who hold that we can tell whether an action was morally right or wrong based on the consequences, hence the name. In general, this branch thinks in terms of well-being and happiness/sadness. The second path people have taken in trying to get to an Ethical Theory goes belongs to the \Glspl{non-consequentialism}, who hold that the consequences of an action have no baring on the morality. In general, this branch points to respect, free-will, the human spirit, and rationality to get the morally right actions. Sometimes you will find middle-ground theories, but these tend to come from the Consequentialists, not the Non-consequentialists. Both of these branches share one thing in common, though, they are trying to answer the question "what should I do?" There are other ethical questions out there concerning different questions, for example, the field of Virtue Ethics, found in Aristotle and most of Eastern Philosophy, is trying to answer the question "who should I be?", which is very different. It seems clear that a good person can make a moral error and a bad person can do the right thing.  For this class, we are mostly only going to be concerned with the 'what should I do?' question, but other philosophy classes are out there which cover the other question.
+As we saw in the last module, Moral Relativism just can't be correct. The reasons for supporting it contradict each other or it leads to truly awful beliefs. If we still want to be Moral Realists, then we are going to need to go with something objective, a theory of morality which has a set of rules or guiding principles to tell us what to do.  Trying to answer this question has lead down two different paths, the first we will cover belongs to the \Glspl{consequentialism}, who hold that we can tell whether an action was morally right or wrong based on the consequences, hence the name. In general, this branch thinks in terms of well-being and happiness/sadness. The second path people have taken in trying to get to an Ethical Theory goes belongs to the \Glspl{non-consequentialism}, who hold that the consequences of an action have no baring on the morality. In general, this branch points to respect, free-will, the human spirit, and rationality to get the morally right actions. Sometimes you will find middle-ground theories, but these tend to come from the Consequentialists, not the Non-consequentialists. Both of these branches share one thing in common, though, they are trying to answer the question ``what should I do?" There are other ethical questions out there concerning different questions, for example, the field of Virtue Ethics, found in Aristotle and most of Eastern Philosophy, is trying to answer the question ``who should I be?", which is very different. It seems clear that a good person can make a moral error and a bad person can do the right thing.  For this class, we are mostly only going to be concerned with the `what should I do?' question, but other philosophy classes are out there which cover the other question.
 
 \newglossaryentry{consequentialism}
 {
@@ -21,7 +21,7 @@ As we saw in the last module, Moral Relativism just can't be correct. The reason
   plural=non-consequentialists
 }
 
-For both the consequentialist and non-consequentialist branches of the tree, we can add further stances by asking various questions. For example, if we ask the question "Do I have moral duties to other people?" and get either "no" or "sometimes", then, likely, we are dealing with a flavor of ethical egoism, which is the stance that something is moral if it benefits you selfishly. You might have heard of this stance before, but by a different name. The most famous supporter of this was Ayn Rand.
+For both the consequentialist and non-consequentialist branches of the tree, we can add further stances by asking various questions. For example, if we ask the question ``Do I have moral duties to other people?" and get either ``no" or ``sometimes", then, likely, we are dealing with a flavor of ethical egoism, which is the stance that something is moral if it benefits you selfishly. You might have heard of this stance before, but by a different name. The most famous supporter of this was Ayn Rand.
 
 \section{The Scientific Method for Ethics}
 
@@ -75,7 +75,7 @@ Donating to Oxfam&500&10&490
 \end{tabular}
 
 
-For this case, suppose that I have a choice between buying myself a new pair of shoes or donate to the charity Oxfam, which is there to alleviate world hunger and poverty. Think of 'hedons' and 'dolors' as made up units of pleasure and pain. I like to think of them relatively, so we can roughly say that donating to Oxfam will cause 50x as much good as buying the new shoes, and it will also cause a 50th of the suffering. According to the Utilitarian, this is the route you should go, make the most hedons and the least dolors.  Remember, these are not actual units, they are just conceptual tools to help understand the theory. You can use different unit sizes for different cases, just keep them the same in the same case.
+For this case, suppose that I have a choice between buying myself a new pair of shoes or donate to the charity Oxfam, which is there to alleviate world hunger and poverty. Think of `hedons' and `dolors' as made up units of pleasure and pain. I like to think of them relatively, so we can roughly say that donating to Oxfam will cause 50x as much good as buying the new shoes, and it will also cause a 50th of the suffering. According to the Utilitarian, this is the route you should go, make the most hedons and the least dolors.  Remember, these are not actual units, they are just conceptual tools to help understand the theory. You can use different unit sizes for different cases, just keep them the same in the same case.
 
 Utilitarianism has no room for the individual making the choice seeing themselves as special, weighing their happiness as greater. It’s the total happiness that matters, not just your happiness. So utilitarianism can call for great personal sacrifice. The happiness of a child during their lifetime might require great personal sacrifice from the parent/caretaker during the first few decades. Utilitarianism says that all beings are equal, morally speaking, so long as they are equal in their ability to feel pleasure and experience pain.
 
@@ -110,9 +110,9 @@ Now, this theory is really good at a lot of things, it is especially useful in h
 
 When we speak of utility as pleasure and the absence of pain, we need to take “pleasure” and “pain” in the broadest sense possible. There are social, intellectual and aesthetic pleasures to consider as well as sensual pleasures. Recognizing this is important to answering what Mill calls the “doctrine of swine” objection to Utilitarianism. This objection takes the Utilitarianism to be unfit for humans because it recognizes no higher purpose to life than the mere pursuit of pleasure. This objection only applies to treating pleasure and pain in their most basic, animalistic, senses.  This was not originally mine, but a version of it was given as a two day lecture when I was in community college. The very original version is not as fun to give and it was published by G.E. Moore in 1903. If you want to see one other objection, one which you could write about in the assignment as well as the original objection to hedonism (which is a more primitive form of utilitarianism, without special amendments, utilitarianism falls into both of these problems). But, here we go:
 
-    \factoidbox{Way deep in the back woods, there lives a pig farmer named Porky. Porky raises prize winning swine and sells them to cover his basic needs. He has no wife/husband and doesn’t really want one. One day, when he was particularly bored, he noticed his swine having fun wallowing in the mud. Thinking that this looked like a good time, he stripped down and jumped in, having a whale of a time. As time goes on, Porky needs more entertainment than merely wallowing with his sows. He starts thinking “man, that’s a pretty little piggy”. Over time, late in the evening, his neighbors start hearing strange sounds coming from the direction of Porky’s shack. They think nothing of it, maybe Porky is just doing some late night breeding to get better piggies for market. Porky is doing some late night breeding of a sort. He is engaged in bestiality! And O! Is he enjoying himself!}
+    \thoughtex{Porky the Pig Farmer}{Way deep in the back woods, there lives a pig farmer named Porky. Porky raises prize winning swine and sells them to cover his basic needs. He has no wife/husband and doesn’t really want one. One day, when he was particularly bored, he noticed his swine having fun wallowing in the mud. Thinking that this looked like a good time, he stripped down and jumped in, having a whale of a time. As time goes on, Porky needs more entertainment than merely wallowing with his sows. He starts thinking “man, that’s a pretty little piggy”. Over time, late in the evening, his neighbors start hearing strange sounds coming from the direction of Porky’s shack. They think nothing of it, maybe Porky is just doing some late night breeding to get better piggies for market. Porky is doing some late night breeding of a sort. He is engaged in bestiality! And O! Is he enjoying himself!}{Porky.jpg}
 
-With all this information about how awesome and pleasurable Porky's life is with his piggy time, we now have to ask "is what he is doing moral?" Well, according to Utilitarianism, if we take pleasure to be in the animalistic sense, it is.
+With all this information about how awesome and pleasurable Porky's life is with his piggy time, we now have to ask ``is what he is doing moral?" Well, according to Utilitarianism, if we take pleasure to be in the animalistic sense, it is.
 \begin{earg}
     \item[]The morally right action is the one which produces the greatest amount of happiness/pleasure for the greatest number of people.
     \item[]If Porky doesn’t engage with his pigs in this way, he will have very few pleasures.
@@ -135,7 +135,7 @@ Because of this objection, Mill and others don't take pleasure in the animalisti
 
 One objection to Utilitarianism isn't concerned with what it measures to determine morality or even how it is measured, rather this objection concerned how it determines the morally right action given the outcomes. As Act-Utilitarianism sits right now, it claims that the morally right action is the one with the highest outcome given the available options. This, however, leads to the possibility of a utility monster. A utility monster is a being which receives a massive quantity of pleasure (happiness, the good) from consuming resources, higher than any other being, by a significant margin, often at the expense of others. Just a cursory glance over the numbers would have Act-Utilitarianism claim that such a utility monster is doing the right thing in exploiting or harming others for their own benefit, because of the massive amount of good which they receive. To put this idea as an example, take the following case:
 
-\factoidbox{Peter Singer\footnote{Peter Singer is an Australian philosopher and is best known for his, seemingly, extreme views regarding Utilitarianism. He holds that the theory is correct and applies it to many contemporary issues. For example, one of his foundations, The Life You Can Save, tracks the spending habits of various charities and connects donors with the one which will get the most 'bang for their buck' in the issue which they are concerned with. Singer, holding true to this belief, lives well below his means and donates substantial amounts to charity. He is mostly concerned with world hunger and poverty, but he has been known to be outspoken about animal 'rights' and welfare.}, late in the evening, while he is resting at home, hears loud banging and commotion coming from his basement. So, he grabs his flashlight and goes down to investigate. He sees a green, round, being with arms and legs tearing apart Singer's plumbing causing massive flooding. "What are you?" Singer exclaims, "and what are you doing to my pipes?" The creature pauses their destruction for a moment and turns to Singer. "I am destroying your plumbing" they explain, "you see, I love wrecking pipes, far more than any suffering caused to you. I am a utility monster."}
+\thoughtex{The Utility Monster}{Peter Singer\footnote{Peter Singer is an Australian philosopher and is best known for his, seemingly, extreme views regarding Utilitarianism. He holds that the theory is correct and applies it to many contemporary issues. For example, one of his foundations, The Life You Can Save, tracks the spending habits of various charities and connects donors with the one which will get the most `bang for their buck' in the issue which they are concerned with. Singer, holding true to this belief, lives well below his means and donates substantial amounts to charity. He is mostly concerned with world hunger and poverty, but he has been known to be outspoken about animal `rights' and welfare.}, late in the evening, while he is resting at home, hears loud banging and commotion coming from his basement. So, he grabs his flashlight and goes down to investigate. He sees a green, round, being with arms and legs tearing apart Singer's plumbing causing massive flooding. ``What are you?" Singer exclaims, ``and what are you doing to my pipes?" The creature pauses their destruction for a moment and turns to Singer. ``I am destroying your plumbing" they explain, ``you see, I love wrecking pipes, far more than any suffering caused to you. I am a utility monster."}{UtilityMonster.jpg}
 
 In this case, most of us would say that it's wrong for the utility monster to destroy Singer's pipes. There are concerns about personal property and there are concerns about the harm done to Singer. However, Act-Utilitarianism, without any modifications, measures pleasure and pain with the same metric. One unit of happiness cancels out one unit of sadness. As a result, so long as the Utility Monster didn't have any other options which would cause a higher total, Act-Utilitarianism would say that they did the right thing. This does not square with general intuitions about morality. 
 
@@ -145,9 +145,9 @@ Act-Utilitarianism gets the wrong result in this sort of case. And this objectio
 
 This problem is often seen as a more gruesome version of the Trolley Problem for Ethics. This objection to Act-Utilitarianism stems from the idea that only the results matter, the ends justify the means. I personally have other versions of problems like this which involve framing an innocent person, forging evidence, and rigging elections, all of which have (due to the situation that they are in) the best consequences. Consider the following case:
 
-    \factoidbox{Bob goes to the doctor for a check up. His doctor finds that Bob is in perfect health. And his doctor also finds that Bob is biologically compatible with six other patients she has who are all dying of various sorts of organ failure. Let’s assume that if Bob lives out his days he will live a typically good life, one that is pleasant to Bob and also brings happiness to his friends and family. But we will assume that Bob will not discover a cure for AIDs or bring about world peace. And let us make similar assumptions about the six people suffering from organ failure.}
+    \thoughtex{A Check-Up}{Bob goes to the doctor for a check up. His doctor finds that Bob is in perfect health. And his doctor also finds that Bob is biologically compatible with six other patients she has who are all dying of various sorts of organ failure. Let’s assume that if Bob lives out his days he will live a typically good life, one that is pleasant to Bob and also brings happiness to his friends and family. But we will assume that Bob will not discover a cure for AIDs or bring about world peace. And let us make similar assumptions about the six people suffering from organ failure.}{OrganHarvest.jpg}
 
-The question for the Act-Utilitarian is "what should the doctor do?" According to the theory, it seems that the good doctor should quickly and as painlessly as possible kill Bob and harvest his organs, getting them to the 6 other patients as quickly as possible. This is because, to quote Spock, "the needs of the many outweigh the needs of the few." The overall outcome of letting Bob go is the value of one average good life minus the values of six average good lives and the overall outcome of killing Bob is the value of six average good lives minus the value of one. But this can't be right. Our intuitions clearly speak to the immorality of this.  Act-Utilitarianism, again, gets the wrong result in this sort of case. 
+The question for the Act-Utilitarian is ``what should the doctor do?" According to the theory, it seems that the good doctor should quickly and as painlessly as possible kill Bob and harvest his organs, getting them to the 6 other patients as quickly as possible. This is because, to quote Spock, ``the needs of the many outweigh the needs of the few." The overall outcome of letting Bob go is the value of one average good life minus the values of six average good lives and the overall outcome of killing Bob is the value of six average good lives minus the value of one. But this can't be right. Our intuitions clearly speak to the immorality of this.  Act-Utilitarianism, again, gets the wrong result in this sort of case. 
 
 \section{Rule Utilitarianism}
 
@@ -163,7 +163,7 @@ In order to deal with the original problem of Bob and his vital organs, the Rule
 
 Like Utilitarianism, Imannual Kant’s moral theory states that there is an absolute moral rule. But, unlike Utilitarianism, it states that the consequences of the action don't matter morally. It is, however, grounded in a theory of intrinsic value. Rather than going with the Principle of Utility, Kant's theory has it that the only thing with moral worth is the Good Will, which we find in persons. Persons, for this theory are  autonomous rational moral agents. This theory, from the very start, makes a certain metaphysical assumption: People have free will. This can't be the kind of free will proposed by the Compatibilist in the sense we have seen in this class, as Kant was fundamentally opposed to it, so the sense of free will must be the Libertarian sense. There have been attempts to make a Kantian Compatibilism, but those seem to have been unsuccessful.
 
-\glspl{kantianism} rests on this notion of the \glspl{good will}, so we should be clear about what that is. The opening passage of Immanuel Kant’s Groundwork for a Metaphysic of Morals proclaims that “it is impossible to conceive of anything in the world, or indeed beyond it, that can be understood as good without qualification except for a good will.” This eloquent sentence places this 'Good Will' at the center of Kant's value theory. The one thing that has intrinsic value, for Kant, is the autonomous good will of a person. But we can't understand Kant's Good Will in the ordinary sense. In everyday discourse we might speak of someone being a person of good will if they want to do good things. But this would be a Consequentialist take. On Kant’s view, the person with Good Will wants  good things out of a sense of moral duty, not just some habit or tendency.
+\glspl{kantianism} rests on this notion of the \glspl{good will}, so we should be clear about what that is. The opening passage of Immanuel Kant’s Groundwork for a Metaphysic of Morals proclaims that “it is impossible to conceive of anything in the world, or indeed beyond it, that can be understood as good without qualification except for a good will.” This eloquent sentence places this `Good Will' at the center of Kant's value theory. The one thing that has intrinsic value, for Kant, is the autonomous good will of a person. But we can't understand Kant's Good Will in the ordinary sense. In everyday discourse we might speak of someone being a person of good will if they want to do good things. But this would be a Consequentialist take. On Kant’s view, the person with Good Will wants  good things out of a sense of moral duty, not just some habit or tendency.
 \factoidbox{The naturally generous philanthropist doesn’t demonstrate their good will through their giving according to Kant, but the selfish greedy person does show their good will when they give to the poor out of a recognition of their moral duty to do so even though they’d really rather not.}
 
 \newglossaryentry{kantianism}
@@ -183,7 +183,7 @@ Like Utilitarianism, Imannual Kant’s moral theory states that there is an abso
 
 So, to be worthy of dignity and moral regard, for Kant, we need to have the ability to see what our moral duty is and act according to it. For Kant, then, in order to be worthy of moral consideration, we need to be able to act in a way which is opposed to our desires/conditioning. Having an autonomous good will with the capacity to act from moral duty is central to being a person in the moral sense and it is the basis, the metaphysical grounding, for an ethics of respect for persons. Now what it is to respect a person merits some further analysis.
 
-Kant's version of the Principle of Utility, his fundamental principle to guide our actions and thereby give people the dignity and respect worthy of their Good Will is called The Categorical Imperative. An imperative is a command or order given. Kant, and others, explain this kind of imperative by contrasting it with another kind, a hypothetical imperative. A hypothetical imperative is a command, but it only applies conditionally according to your desires, what your goal is. For example, "if you want to avoid traffic, leave 15min early." This imperative tells you what to do if you want to avoid traffic, but it fails to tell you what to do in a case where you don't want to avoid traffic. A categorical imperative (though Kant thinks there's only one) is different in that it tells you what to do regardless of your goal or desires. It applies according to the kind of action you are taking, not why you are taking it. Kant also holds that if there is a moral law, it will be the Categorical Imperative. Treating it that way, moral reasons must always overshadow any other sort of reasons which can be given. You might, for instance, think you have a self-interested reason to cheat on exam. But if morality is grounded in a categorical imperative, then your moral reason against cheating overrides your self-interested reason for cheating. If we think considerations of moral obligation trump self-interested considerations, Kant’s idea that the fundamental law of morality is a categorical imperative accounts for this nicely.
+Kant's version of the Principle of Utility, his fundamental principle to guide our actions and thereby give people the dignity and respect worthy of their Good Will is called The Categorical Imperative. An imperative is a command or order given. Kant, and others, explain this kind of imperative by contrasting it with another kind, a hypothetical imperative. A hypothetical imperative is a command, but it only applies conditionally according to your desires, what your goal is. For example, ``if you want to avoid traffic, leave 15min early." This imperative tells you what to do if you want to avoid traffic, but it fails to tell you what to do in a case where you don't want to avoid traffic. A categorical imperative (though Kant thinks there's only one) is different in that it tells you what to do regardless of your goal or desires. It applies according to the kind of action you are taking, not why you are taking it. Kant also holds that if there is a moral law, it will be the Categorical Imperative. Treating it that way, moral reasons must always overshadow any other sort of reasons which can be given. You might, for instance, think you have a self-interested reason to cheat on exam. But if morality is grounded in a categorical imperative, then your moral reason against cheating overrides your self-interested reason for cheating. If we think considerations of moral obligation trump self-interested considerations, Kant’s idea that the fundamental law of morality is a categorical imperative accounts for this nicely.
 
 Although Kant gives 4 different statements of the Categorical Imperative and claims that they all boil down to the same basic idea, there is some debate about whether they do. Two of the formulations just seem to be restatements of the other two, and the debate is over whether these two can be formed together. Once you see them, you will see that they certainly don't look like they are expressing the same idea. The first formulation which we will cover is called The Principle from Humanity, for this class, though other names for it are out there. The second formulation is called The Principle from Universalizability for this class, though, again, other names are out there.
 
@@ -199,7 +199,7 @@ We treat people as a means to our own ends in ways that are not morally problema
 
 By contrast, we use someone as a mere-means to our own ends if we force them to do our will, or if we deceive them into doing our will. We are, in a sense, using them without their consent, where it would not be possible for them to consent. Sometimes we use people as mere-means when we don't take their goals into account in our interactions with them.
 
-    \factoidbox{Suppose that I have the goal of building a tower with my name emblazoned on the top.  I have the money to do this and I hire workers to build it (they have the understanding that they will get paid when the job is done). Just before they finish the work and would expect to get paid, I take all of my money, put it in an off-shore account under my son's name and declare bankruptcy. Using the laws in this regard, I get the contracts waved so that I don't pay the workers.  Later, when the dust settles, I transfer the money back into my name.}
+    \thoughtex{Smith Tower}{Suppose that I have the goal of building a tower with my name emblazoned on the top.  I have the money to do this and I hire workers to build it (they have the understanding that they will get paid when the job is done). Just before they finish the work and would expect to get paid, I take all of my money, put it in an off-shore account under my son's name and declare bankruptcy. Using the laws in this regard, I get the contracts waved so that I don't pay the workers.  Later, when the dust settles, I transfer the money back into my name.}{SmithTower.jpg}
 
 In doing this, I have used those workers as mere-means. I have the goal of getting the building, they have the goal of getting paid. In my interactions with them, according to Kantianism, I should have, in a sense, made their goals my own and had the intermediate end of paying them for the work. In the case above, the workers and I do not share the same end, so I am using them merely as a means.
 
@@ -225,12 +225,12 @@ So, killing is always wrong, so is stealing. Another example of this formulation
     \item[] Treating a person as a mere means to an end is always morally wrong.
     \item[] Therefore, taxation is always morally wrong.
 \end{earg}
-Some of my more conservative students may like the sound of that, "Taxation is Theft" they tend to shout. But many of you will have a problem with the consequences of taxation always being morally wrong. Public schools, as they are paid by taxes, gone. Most public roads, if they do not lead to some person's business and they did not pay for it, gone. The cost of your college education will sky-rocket, as they are subsidized by taxes. And many others.
+Some of my more conservative students may like the sound of that, ``Taxation is Theft" they tend to shout. But many of you will have a problem with the consequences of taxation always being morally wrong. Public schools, as they are paid by taxes, gone. Most public roads, if they do not lead to some person's business and they did not pay for it, gone. The cost of your college education will sky-rocket, as they are subsidized by taxes. And many others.
 \subsection{Lying}
 
 This is an interesting case, and one which Kant himself thought was right, as in he thought that the theory got the correct answer here, however, this does not line up with most people's moral intuitions about the case. Take this case as an example (which will appear in the discussion for this module):
 
-    \factoidbox{Your roommate is in the shower after having a late night with a recently gained boy/girlfriend, who had gone through a recent bad break-up (their former significant other is "the ex", this is not the ex of your roommate, for clarity) . You hear a knock on the door and go to answer it. You find the ex standing at the door with an axe, murder in his/her eyes. The ex asks you “Where is [insert roommate name]?” Neither of you can hear the shower running. You know that if you tell the ex, then they will rush right through you/knock you out/whatever and get to the roommate killing them.} 
+    \thoughtex{Kant's Axe}{Your roommate is in the shower after having a late night with a recently gained boy/girlfriend, who had gone through a recent bad break-up (their former significant other is ``the ex", this is not the ex of your roommate, for clarity) . You hear a knock on the door and go to answer it. You find the ex standing at the door with an axe, murder in his/her eyes. The ex asks you “Where is [insert roommate name]?” Neither of you can hear the shower running. You know that if you tell the ex, then they will rush right through you/knock you out/whatever and get to the roommate killing them.}{KantsAxe.jpg} 
 
 According to The Humanity Principle, we should never use others as a mere-means. But, does lying count as a mere-means? According to Kant, it does. Kant says that in lying, you are misinforming one person for the benefit of another (or yourself), without appreciating their intrinsic worth. This is always wrong, according to the principle, so lying, no matter what, is always wrong. Sure, you could refuse to answer, slam the door, and so on, but you can never lie. This means that lying to the axe-murderer is wrong. So, if you need to speak, then you must tell them that your roommate is in the shower, and more than likely, deal with the Psycho scene later. 
 
@@ -239,9 +239,9 @@ However, this is an issue, because it certainly seem right that there are cases 
 
 This particular problem addresses something interesting in this formulation of the Categorical Imperative (and this feature should be found in any rephrasing of it, as it's core). In it, it states that we should not use ourselves as mere-means. Since Kant explicitly stated that we shouldn't, it must thereby be possible to use ourselves as mere-means. This was quite the puzzle for me, personally, how could I possibly do something without taking my own goals into account? How could I force myself to do something against my will? The examples which Kant himself gives have not aged well, they involve sexual acts and suicide, which I don't want to use for this course. 
 
-I have hence asked around and some examples do seem problematic and I will look at the issue of rendering aid.2 Often we glorify people who help others at the cost of their own wants and goals. In such a case, they are not taking their own goals into account and using themselves to benefit others. This, by its very nature, would be the person using themselves as a mere-means. Here is an example, in an ordinary case:
+I have hence asked around and some examples do seem problematic and I will look at the issue of rendering aid. Often we glorify people who help others at the cost of their own wants and goals. In such a case, they are not taking their own goals into account and using themselves to benefit others. This, by its very nature, would be the person using themselves as a mere-means. Here is an example, in an ordinary case:
 
-    \factoidbox{Suppose that I have the goal of buying a new video game, The Elder Scrolls 20 or some such, and I know that given the shear demand for the game, if I am not there just as the shop opens, it will be sold out. As I am driving to the shop early,  I notice a young man having a hard time changing a tire3 . Feeling as though I should help, I pull over to render aid. This prevents me from making it to the shop on time and violates my end.}
+    \thoughtex{Changing a Tire}{Suppose that I have the goal of buying a new video game, The Elder Scrolls 20 or some such, and I know that given the shear demand for the game, if I am not there just as the shop opens, it will be sold out. As I am driving to the shop early,  I notice a young man having a hard time changing a tire. Feeling as though I should help, I pull over to render aid. This prevents me from making it to the shop on time and violates my end.}{changingtire.jpg}
 
 In this case, it would seem that I have used myself as a mere-means and cases of rendering aid like this would be morally wrong.    
 \section{The Principle from Universalizability}
@@ -250,7 +250,7 @@ Act only on the maxim that you can consistently will to be a universal law
 \end{center}
 This version is also known as the formula of the universal law. The maxim of our action is the base-level reason or principle that determines what we are doing. We act for our own reasons and different goals might lead to similar actions. For example, a person might wash their clothes regularly because they don't want to smell bad while another person might do the same because they don't want their significant other to complain about the stack of clothes near the closet. Though they have the same action attached to them, the maxim behind the action will be different.  For Kant, intentions matter and this formulation really gets at this point. He evaluates the moral status of actions not according to the action itself or according to its consequences, but according to the maxim of the action. Whether an action is right or wrong  is determined by the actor’s intentions or reasons for acting.
 
-It should be noted that a \gls{maxim} should not include your personal wants and desires, those would make it a hypothetical imperative. A maxim should be written/phrases as something along the lines of "I will A in order to realize C." Where A is the action you want to perform and C is the reasoning behind the action. So, suppose that I am deep in debt to a loan shark because of my gambling habit. I go to the bank to get a loan to pay the loan shark and save my knee-caps. The maxim for my action here would be something along the lines of "I will lie in order to get money."
+It should be noted that a \gls{maxim} should not include your personal wants and desires, those would make it a hypothetical imperative. A maxim should be written/phrases as something along the lines of ``I will A in order to realize C." Where A is the action you want to perform and C is the reasoning behind the action. So, suppose that I am deep in debt to a loan shark because of my gambling habit. I go to the bank to get a loan to pay the loan shark and save my knee-caps. The maxim for my action here would be something along the lines of ``I will lie in order to get money."
 
 \newglossaryentry{maxim}
 {
@@ -259,7 +259,7 @@ It should be noted that a \gls{maxim} should not include your personal wants and
 }
 
 
-According to this formulation, what makes an action morally acceptable is that its maxim is universalizable. That is, morally permissible action is action that is motivated by an intention that we can rationally will that others act on similarly. A morally prohibited action is just one where we can’t rationally will that our maxim is universally followed. Basically, ask yourself "am I making a special exception for myself?" "could anyone in my situation do this?" If anyone with similar desires could do what you are doing and accomplish them, then you are morally in the clear, otherwise you are morally up a creek.
+According to this formulation, what makes an action morally acceptable is that its maxim is universalizable. That is, morally permissible action is action that is motivated by an intention that we can rationally will that others act on similarly. A morally prohibited action is just one where we can’t rationally will that our maxim is universally followed. Basically, ask yourself ``am I making a special exception for myself?" ``could anyone in my situation do this?" If anyone with similar desires could do what you are doing and accomplish them, then you are morally in the clear, otherwise you are morally up a creek.
 
 Here is an example of this thought at work:
 
